<resources>
    <string name="app_name">Urban-fix</string>
    <string name="login_email_hint">E-mail</string>
    <string name="login_password_hint">Senha</string>
    <string name="login_button">Entrar</string>
    <string name="login_login">Entrar</string>
    <string name="login_register">Criar uma conta</string>
    <string name="register_name_hint">Nome</string>
    <string name="register_lastname_hint">Sobrenome</string>
    <string name="register_birthday_hint">Aniversário</string>
    <string name="register_email_hint">E-mail</string>
    <string name="register_password_hint">Senha</string>
    <string name="register_finish_button">Finalizar</string>
    <string name="register_cancel_button">Cancelar</string>
    <string name="urbanfix_description">Urban fix mobile</string>
    <string name="invalid_password_or_email">Senha ou email é inválido</string>
    <string name="register_failed_create_user">Falha ao criar usuário</string>
    <string name="back_button"><![CDATA[<< Voltar]]></string>
    <string name="forgot_password_textview">Esqueceu a senha?</string>
    <string name="reset_password_button">Resetar senha</string>
    <string name="forgot_password_register">Esqueceu a senha?</string>
    <string name="nav_account_title">Minha conta</string>
    <string name="nav_to_alert_title">Realizar alerta</string>
    <string name="nav_notice_title">Notificações</string>
    <string name="nav_about_app_title">Sobre</string>
    <string name="nav_settings_title">Configurações</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="title_activity_maps">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_map_title">Mapa</string>
    <string name="register_cpf_hint">Cpf</string>
    <string name="register_label">Registrar</string>
    <string name="another_menu_group">Outros</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="nav_statistics_title">Estatísticas</string>
    <string name="forgot_password_tip_textview">Entre com o seu email abaixo para que possamos proseguir.</string>
    <string name="alert_location">Localização</string>
    <string name="alert_description_textview">Descrição:</string>
    <string name="alert_typeofproblem">Tipo de problema</string>
    <string name="alert_photoImageView_description">Foto do problema</string>
    <string name="alert_finishButton_text">Finalizar</string>
    <string name="title_activity_settings_fragment">settingsFragment</string>
    <string name="alert_finishalert_error">Entre com uma descrição do problema para podermos prosseguir</string>
    <string name="permission_denied">Permissão negada!</string>
    <string name="location_you_are_here">Você está aqui</string>
    <string name="fragment_settings_title">Configurações</string>
    <string name="fragment_alert_title">Realizar alerta</string>
    <string name="fragment_map_title">Mapa</string>
    <string name="fragment_account_title">Conta</string>
    <string name="register_user_succesful">Registrado com sucesso</string>
    <string name="forgot_password_email_is_empty">O e-mail está vazio</string>
    <string name="forgot_password_msg_sended">Sua senha foi enviada para </string>
    <string name="forgot_password_email_failed">Falha ao enviar senha por e-mail</string>
    <string name="account_nofalerts">Nº de alertas: </string>
    <string name="alert_finishalert_ok">Alerta emitido com sucesso!</string>
    <string name="noticy_title">Alertas</string>
    <string name="fragment_noticy_title">Problemas</string>
    <string name="setting_lougout">Logout</string>
    <string name="setting_exit_title">Exit</string>
    <string name="setting_exit_ask">Deseja realmente sair?</string>
    <string name="setting_exit_option">Sair</string>
    <string name="register_fields_empty">Preencha todos os campos</string>
    <string name="nav_logout_title">Sair</string>
    <string name="main_loggof_alert_title">Sair</string>
    <string name="main_loggof_alert_message">Deseja sair do aplicativo?</string>
    <string name="login_empty_fields">Preencha todos os campos</string>
    <string name="login_failed_login">Login falhou</string>
    <string name="login_remember_email_and_password">Lembrar</string>
    <string name="alert_define_location">Definir Localização</string>
    <string name="fragment_account_urgency_seekbar">Urgência</string>
    <string name="login_progressdialog_message">Realizando login</string>
    <string name="login_email_is_empty">Entre com o seu e-mail</string>
    <string name="login_password_is_empty">Entre com a sua senha</string>
    <string name="alert_failed_get_gps_location">Falha ao ler GPS</string>
    <string name="alert_description_textview_is_empty">Preencha este campo</string>
    <string name="alert_checked_initialized">Gerado em</string>
    <string name="alert_inserting_alert">Cadastrando problema</string>
    <string name="alert_failed_to_insert_alert">Ocorreu um erro!</string>
    <string name="login_success">Login realizado</string>
    <string name="login_welcome_user">Bem vindo</string>
    <string name="login_failed_find_on_database">Usuário não encontrado</string>
    <string name="alert_issued">Alerta emido!</string>
    <string name="alert_failed_to_insert_photo">Falha ao subir foto</string>
    <string name="alert_failed_to_update_user">Falha ao atualizar usuário</string>
    <string name="alert_status_alert_has_been_issued">Emitido</string>
    <string name="select_your_address">Selecione seu endereço</string>
    <string name="problem_kind_of_problem_label">Tipo de problema</string>
    <string name="problem_date_label">Data</string>
    <string name="problem_address_label">Endereço</string>
    <string name="problem_status_label">Status</string>
    <string name="problem_urgency_label">Urgencia</string>
    <string name="problem_description">Descrição</string>
    <string name="urgency_status_low">Baixa</string>
    <string name="urgency_status_moderate">Moderado</string>
    <string name="urgency_status_critical">Crítico</string>
    <string name="alert_inserting_photo">Armazenando foto</string>
    <string name="alert_updating_user">Atualizando usuário</string>
    <string name="register_thanks_for_register">Obrigado por se registrar!</string>
    <string name="register_back_button">Voltar</string>
    <string name="register_creating_new_user">Criando novo usuário</string>
    <string name="register_inserting_user_on_db">Cadastrando usuário no banco de dados!</string>
    <string name="login_finding_user">Buscando usuário</string>
    <string name="problem_feelling_label">Reação</string>
    <string name="problem_write_your_comment">Escreva seu comentário aqui</string>
    <string name="problem_photo_description">Foto do problema</string>
    <string name="problem_no_content">xxxx</string>
    <string name="comment_insert_comment_hint">Insira o seu comentário</string>
    <string name="comment_cancel_button">Cancelar</string>
    <string name="comment_button">Comentar</string>
    <string name="problem_comment_button">Comentar</string>
    <string name="problem_cancel_comment_button">Cancelar</string>

    <string-array name="problems_array">
        <item>Selectione um problema</item>
        <item>Buraco na pista</item>
        <item>Arvore caída</item>
        <item>Poste caido</item>
        <item>Vazamento de água</item>
        <item>Falta de energia</item>
        <item>Acúmulo de lixo</item>
        <item>Mato alto</item>
    </string-array>
</resources>
