<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/accountItem"
        android:icon="@drawable/ic_account_circle_black_24dp"
        android:title="@string/nav_account_title" />
    <item
        android:id="@+id/mapItem"
        android:icon="@drawable/ic_map_black_24dp"
        android:title="@string/nav_map_title"/>
    <item
        android:id="@+id/alertItem"
        android:icon="@drawable/ic_add_alert_black_24dp"
        android:title="@string/nav_to_alert_title" />
    <item
        android:id="@+id/noticesItem"
        android:icon="@drawable/ic_notifications_active_black_24dp"
        android:title="@string/nav_notice_title" />
    <item
        android:id="@+id/aboutItem"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/nav_about_app_title" />
    <item
        android:id="@+id/settingsItem"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/nav_settings_title" />
</menu>