<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_profile"
            android:icon="@drawable/ic_user"
            android:title="@string/nav_account_title"/>
        <item
            android:id="@+id/nav_alert"
            android:icon="@drawable/ic_add_alert_black_24dp"
            android:title="@string/nav_to_alert_title" />
        <item
            android:id="@+id/nav_notices"
            android:icon="@drawable/ic_notifications_active_black_24dp"
            android:title="@string/nav_notice_title" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_map_black_24dp"
            android:title="@string/nav_map_title" />
        <item
            android:id="@+id/nav_statistics"
            android:icon="@drawable/ic_pie_chart_black_24dp"
            android:title="@string/nav_statistics_title" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/nav_settings_title" />
    </group>



</menu>
