<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/default_layout_padding"
    android:columnCount="3"
   >

   <ImageView
        android:id="@+id/photoImageView"
       android:layout_height="250dp"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="fill_horizontal"
        android:layout_rowSpan="3"
        app:srcCompat="@android:drawable/ic_menu_gallery"
        android:contentDescription="@string/alert_photoImageView_description" />


    <TextView
        android:id="@+id/locationTextView"
        android:layout_row="3"
        android:text="@string/alert_location" />

    <TextView
        android:layout_row="4"
        android:layout_column="0"
        android:text="@string/alert_typeofproblem"
        android:textSize="@dimen/label_activity"
        android:layout_columnSpan="3"
        android:layout_gravity="fill_horizontal"
        android:textStyle="bold"/>

    <Spinner android:id="@+id/TypeOfProblemSpinner"
        android:layout_row="5"
        android:layout_column="0"
        android:layout_columnSpan="3"
        android:layout_gravity="fill_horizontal">

    </Spinner>

    <TextView
        android:id="@+id/alertDescriptionTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="6"
        android:layout_column="0"
        android:text="@string/alert_description_textview"
        android:textSize="@dimen/label_activity"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/alertDescriptionEditText"
        android:ems="30"
        android:layout_row="7"
        android:inputType="textMultiLine"
        android:lines="3"
        android:layout_columnSpan="3"
        android:layout_gravity="fill_horizontal"/>

    <Button
        android:id="@+id/finishButton"
        android:background="@color/colorPrimaryDark"
        android:text="@string/alert_finishButton_text"
        android:layout_row="8"
        android:layout_column="0"
        android:layout_columnSpan="3"
        android:layout_gravity="fill_horizontal"
        android:textColor="@android:color/background_light" />


</GridLayout>